--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://sahiltapu.github.io/estimation_page",
+  "homepage": "https://sahiltapu.github.io/eatimation_page_sahils_engineering",
   "name": "billing_counter",
   "version": "0.1.0",
   "private": true,
